--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version" : 2,
   "name" : "FiltaQuilla",
   "description" : "Mail filter custom actions and searches",
-  "version" : "3.0pre14",
+  "version" : "3.0pre15",
   "default_locale": "en",
   "author" : "R Kent James,Axel Grude",
   "developer" : {
@@ -12,7 +12,8 @@
   "applications" : {
       "gecko" : {
           "id" : "filtaquilla@mesquilla.com",
-          "strict_min_version" : "68.0"
+          "strict_min_version" : "68.0",
+          "strict_max_version" : "78.*"
       }
   },
   "icons" : {
