--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version" : 2,
     "name" : "FiltaQuilla",
     "description" : "Mail filter custom actions and searches",
-    "version" : "2.1",
+    "version" : "2.1.1",
     "author" : "R Kent James,Axel Grude",
     "legacy" : {
         "options" : {
@@ -17,7 +17,8 @@
     "applications" : {
         "gecko" : {
             "id" : "filtaquilla@mesquilla.com",
-            "strict_min_version" : "68.0"
+            "strict_min_version" : "68.0",
+            "strict_ax_version" : "73.*"
         }
     },
     "icons" : {
