--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version" : 2,
   "name" : "FiltaQuilla",
   "description" : "Mail filter custom actions and searches",
-  "version" : "3.2.1a",
+  "version" : "3.2pre5",
   "default_locale": "en",
   "author" : "R Kent James,Axel Grude",
   "developer" : {
