--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version" : 2,
   "name" : "FiltaQuilla",
   "description" : "Mail filter custom actions and searches",
-  "version" : "3.2pre11",
+  "version" : "3.2pre13",
   "default_locale": "en",
   "author" : "R Kent James,Axel Grude",
   "developer" : {
@@ -13,7 +13,7 @@
       "gecko" : {
           "id" : "filtaquilla@mesquilla.com",
           "strict_min_version" : "74.0",
-          "strict_max_version" : "89.0"
+          "strict_max_version" : "91.0a1"
       }
   },
   "icons" : {
@@ -31,8 +31,7 @@
       "parent": {
         "scopes": ["addon_parent"],
         "paths": [["WindowListener"]],
-        "script": "content/api/WindowListener/implementation.js",
-        "events": ["startup"]
+        "script": "content/api/WindowListener/implementation.js"
       }
     },
     "LegacyPrefs": {
