--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version" : 2,
   "name" : "FiltaQuilla",
   "description" : "Mail filter custom actions and searches",
-  "version" : "3.2pre56",
+  "version" : "3.2pre64",
   "default_locale": "en",
   "author" : "R Kent James,Axel Grude",
   "developer" : {
@@ -12,8 +12,7 @@
   "applications" : {
       "gecko" : {
           "id" : "filtaquilla@mesquilla.com",
-          "strict_min_version" : "74.0",
-          "strict_max_version" : "92.*"
+          "strict_min_version" : "74.0"
       }
   },
   "icons" : {
