--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version" : 2,
   "name" : "FiltaQuilla",
   "description" : "Mail filter custom actions and searches",
-  "version" : "3.4",
+  "version" : "3.5pre25",
   "default_locale": "en",
   "author" : "R Kent James,Axel Grude",
   "developer" : {
@@ -12,8 +12,8 @@
   "applications" : {
       "gecko" : {
           "id" : "filtaquilla@mesquilla.com",
-          "strict_min_version" : "74.0",
-          "strict_max_version" : "92.0a1"
+          "strict_min_version" : "91.0",
+          "strict_max_version" : "102.*"
       }
   },
   "icons" : {
@@ -53,6 +53,14 @@
         "scopes": ["addon_parent"],
         "paths": [["LegacyPrefs"]],
         "script": "content/api/LegacyPrefs/implementation.js"
+      }
+    },
+    "DomContentScript": {
+      "schema": "content/api/DomContentScript/schema.json",
+      "parent": {
+        "scopes": ["addon_parent"],
+        "paths": [["DomContentScript"]],
+        "script": "content/api/DomContentScript/implementation.js"
       }
     }
   }    
