--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version" : 2,
   "name" : "FiltaQuilla",
   "description" : "Mail filter custom actions and searches",
-  "version" : "3.7.2pre4",
+  "version" : "4.0b2",
   "default_locale": "en",
   "author" : "R Kent James,Axel Grude",
   "developer" : {
@@ -12,8 +12,8 @@
   "applications" : {
       "gecko" : {
           "id" : "filtaquilla@mesquilla.com",
-          "strict_min_version" : "91.0",
-          "strict_max_version" : "111.0b4"
+          "strict_min_version" : "112.0",
+          "strict_max_version" : "115.*"
       }
   },
   "icons" : {
@@ -21,9 +21,7 @@
       "64" : "skin/filtaquilla-64.png"
   },
   "background": {
-    "scripts": [
-      "filtaquilla-background.js"
-    ]
+    "page": "filtaquilla-background.html"
   } ,
   "permissions": [
     "messagesRead",
